# Console-Menu

./: CMakeLists.txt  README.md  action.cpp  action.h  global.cpp  global.h  menu.cpp  menu.h  menuMain.cpp
include/: action.h  global.h  menu.h
src/: action.cpp  global.cpp  main.cpp  menu.cpp
